--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -2,6 +2,8 @@
 
 {% load humanize %}
 
+{% block title %}| Register Account{% endblock %}
+
 {% block content %}
 
 <section id="register" class="bg-light py-5">
@@ -14,6 +16,8 @@
                 <i class="fas fa-user-plus"></i> Register</h4>
             </div>
             <div class="card-body">
+              <!-- Alerts -->
+              {% include 'partials/_alerts.html' %}
                 <form action="{% url 'register' %}" method="POST">
                     {% csrf_token %}
                   <div class="form-group">
